Fixed #118, Added overflow-x: hidden in <body>

--- a/src/partials/elements/_typography.sass
+++ b/src/partials/elements/_typography.sass
@@ -4,6 +4,7 @@ html
     font-size: $fontSize
 body
     line-height: $lineHeight
+    overflow-x : hidden
     
 p:not(:first-child)
     margin-top   : $typography_pVerticalMargin
